# give-care

./: .replit  app.py  azure.py  care.py  db-del.py  db.py  main.py  pyproject.toml  sms.py  vapi.py
assistant/: 0_setup.py  1_routines.py  2_tools.py  3_tools.py  4_tools.py  5_escalation.py  6_agents.py  7_orchestration-azure.py  7_orchestration.py
templates/: index.html
